--- a/Dior/Beauty.html
+++ b/Dior/Beauty.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/dior.css">
-    <link rel="stylesheet" href="./css/beauty.css">
+    <link rel="stylesheet" href="./css/Beauty.css">
      <!-- JS 플러그인 파일 -->
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/jquery-3.3.1.min.js"></script>
@@ -58,6 +58,7 @@
                 <div class="gnb_div">
                     <nav class="gnb">
                         <ul>
+                            <li><a href="dior.html">Home</a></li>
                             <li><a href="Fashion.html">Fashion</a></li>
                             <li><a href="Beauty.html">Beauty</a></li>
                             <li><a href="accessory.html">accessory</a></li>
