--- a/Dior/dior.html
+++ b/Dior/dior.html
@@ -55,6 +55,7 @@
                 <div class="gnb_div">
                     <nav class="gnb">
                         <ul class="w1440">
+                            <li><a href="dior.html">Home</a></li>
                             <li><a href="Fashion.html">Fashion</a></li>
                             <li><a href="Beauty.html">Beauty</a></li>
                             <li><a href="accessory.html">accessory</a></li>
