--- a/Dior/Fashion.html
+++ b/Dior/Fashion.html
@@ -58,6 +58,7 @@
                  <div class="gnb2_div">
                     <nav class="gnb2">
                         <ul class="w1440">
+                            <li><a href="dior.html">Home</a></li>
                             <li><a href="Fashion.html">Fashion</a></li>
                             <li><a href="Beauty.html">Beauty</a></li>
                             <li><a href="accessory.html">accessory</a></li>
