--- a/Dior/accessory.html
+++ b/Dior/accessory.html
@@ -11,6 +11,9 @@
      <!-- JS 플러그인 파일 -->
     <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/jquery-3.4.1.min.js"></script>
 
 </head>
 <body>
