--- a/Dior/Beauty.html
+++ b/Dior/Beauty.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfoilo, Flex, Caxa UI</title>
+    <title>Portfoilo, Flex, Dior_Beauty</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="./images/favicon/montblanc_fav32.png">
     <link rel="apple-touch-icon=precomposed" href="./images/favicon/montblanc_fav144.png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/dior.css">
-    <link rel="stylesheet" href="./css/Beauty.css">
+    <link rel="stylesheet" href="./css/beauty.css">
      <!-- JS 플러그인 파일 -->
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/jquery-3.3.1.min.js"></script>
@@ -29,7 +29,7 @@
                 </p>
                 <p>
                     <a href="#go">매장위치 바로가기 &nbsp;&nbsp;</a>
-                    <img src="http://place-hold.it/14x14/fff" alt="혜택확인">
+                    <!-- <img src="http://place-hold.it/14x14/fff" alt="혜택확인"> -->
                 </p>
                 <p>
                     창닫기&nbsp;&nbsp;
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="header_01">
-                   <img src="./images/main_img.jpg" alt="헤더메인">
+                   <img src="./images/christina-deravedisian-yXsYTnm0KtI-unsplash.jpg" alt="헤더메인">
                 </div>
                 
                 <div class="gnb_div">
@@ -97,7 +97,7 @@
                         <li id="three"><a>#Romantic</a></li>
                         <li id="four"><a>#Boutique</a></li>
                         <!-- <li><a></a></li> -->
-                        <p>View Pohto</p>
+                        <p>View Photo</p>
                     </ul>
                     <div class="re_view">
                         <img src="./images/view_img4.jpg" alt="제품동영상">
