--- a/Dior/Fashion.html
+++ b/Dior/Fashion.html
@@ -29,7 +29,7 @@
                 </p>
                 <p>
                     <a href="./Beauty.html">매장위치 바로가기 &nbsp;&nbsp;</a>
-                    <img src="http://place-hold.it/14x14/fff" alt="혜택확인">
+                    <!-- <img src="http://place-hold.it/14x14/fff" alt="혜택확인"> -->
                 </p>
                 <p>
                     창닫기&nbsp;&nbsp;
