--- a/Dior/accessory.html
+++ b/Dior/accessory.html
@@ -11,6 +11,13 @@
      <!-- JS 플러그인 파일 -->
     <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/prefixfree.min.js"></script>
+    
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/font.css">
+    <link rel="stylesheet" href="./css/dior.css">
+    <link rel="stylesheet" href="./css/accessory.css">
 
 </head>
 <body>
@@ -22,7 +29,7 @@
                     온라인 구매는&nbsp; 불가하오니&nbsp; 매장방문 바랍니다.
                 </p>
                 <p>
-                    <a href="#go">매장위치 바로가기 &nbsp;&nbsp;</a>
+                    <a href="./Beauty.html">매장위치 바로가기 &nbsp;&nbsp;</a>
                     <!-- <img src="http://place-hold.it/14x14/fff" alt="혜택확인"> -->
                 </p>
                 <p>
@@ -197,10 +204,7 @@
         </footer>
         <!-- footer -->
     </div>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/font.css">
-    <link rel="stylesheet" href="./css/dior.css">
-    <link rel="stylesheet" href="./css/accessory.css">
+
     <!-- 제이쿼리 스와이퍼 플러그인 추가 -->
     <script src="./js/swiper-bundle.js"></script>
     <link rel="stylesheet" href="./css/swiper-bundle.css">
