--- a/Dior/accessory.html
+++ b/Dior/accessory.html
@@ -106,21 +106,21 @@
                             <div class="swiper-slide ">
                                 <!-- <h3><em>Contemporary&nbsp;Dance</em></h3> -->
                                 <div class="p_mockup">
-                                    <img src="./images/im4.jpg" alt="슬라이드이미지600x500" width="600" height="500">
+                                    <img src="./images/ass_img5.jpg" alt="슬라이드이미지600x500" width="600" height="500">
                                 </div>
                             </div>
                             <!-- C-5. 스와이퍼 될 Slider 각각 내용들 -->
                             <div class="swiper-slide ">
                                 <!-- <h3><em>Contemporary&nbsp;Dance</em></h3> -->
                                 <div class="p_mockup">
-                                    <img src="./images/im5.jpg" alt="슬라이드이미지600x500" width="600" height="500">
+                                    <img src="./images/ass_img6.jpg" alt="슬라이드이미지600x500" width="600" height="500">
                                 </div>
                             </div>
                             <!-- C-6. 스와이퍼 될 Slider 각각 내용들 -->
                             <div class="swiper-slide ">
                                 <!-- <h3><em>Contemporary&nbsp;Dance</em></h3> -->
                                 <div class="p_mockup">
-                                    <img src="./images/im6.jpg" alt="슬라이드이미지600x500" width="600" height="500">
+                                    <img src="./images/ass_img7.jpg" alt="슬라이드이미지600x500" width="600" height="500">
                                 </div>
                             </div>
                             <!-- /C-1. 스와이퍼 될 Slider 각각 내용들 -->
