--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <p><a href="./Montblanc_Float/montblanc.html">몽블랑 플롯 포트폴리오</a></p>
         <p><a href="./RWD_Temlplate/09_webadd_footer.html">반응형 템플릿</a></p>
         <p><a href="./Dior/dior.html">디올</a></p>
+        <p><a href="./travel_Temlplate/hana.html">하나투어</a></p>
+
       </div>
 
 
