--- a/mobile_web/mobile_iframe.html
+++ b/mobile_web/mobile_iframe.html
@@ -21,6 +21,8 @@
             background-repeat: no-repeat;
             background-size: 100%;
             background-position: center;
+            background-color: #fff;
+
         }
         .iframe_box{
             padding-top: 132px;
