--- a/mobile_web/Home.html
+++ b/mobile_web/Home.html
@@ -50,7 +50,7 @@
                 </ul>
             </nav>
             <div class="main_logo">
-                <img src="./images/Disney+_logo.svg.png" alt="메인로고">
+                <a href="./Home.html"><img src="./images/Disney+_logo.svg.png" alt="메인로고"></a>
             </div>
             <!-- 햄버거 메뉴 클릭시 나오는 GNB메뉴 -->
         </header>
