--- a/mobile_web/Info.html
+++ b/mobile_web/Info.html
@@ -66,7 +66,7 @@
             </aside>
             <!-- /Ticket 링크 페이지 -->
             <div class="main_logo">
-                <img src="./images/Disney+_logo.svg.png" alt="메인로고">
+                <a href="./Home.html"><img src="./images/Disney+_logo.svg.png" alt="메인로고"></a>
             </div>
         </header>
         <!-- /Header -->
