--- a/mobile_web/ticket.html
+++ b/mobile_web/ticket.html
@@ -71,7 +71,7 @@
             <img src="./images/banner3.jpg" alt="배너">
         </aside>
         <div class="main_logo">
-          <img src="./images/Disney+_logo.svg.png" alt="메인로고">
+            <a href="./Home.html"><img src="./images/Disney+_logo.svg.png" alt="메인로고"></a>
         </div>
       </header>
       <!-- /header -->
