--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p><a href="./mobile_web/mobile_iframe.html">겨울왕국_모바일웹_iframe</a></p>
         <p><a href="./mobile_web/Home.html">겨울왕국_모바일웹</a></p>
         <p><a href="./group_audi/index.html">아우디 Audi</a></p>
-        <p><a href="./group_audi/AudiKorea.html">아우디 코리아 기획서 보기 Audi</a></p>
+        <p><a href="./group_audi/AudiKorea.pdf">아우디 코리아 기획서 보기 Audi</a></p>
 
       </div>
 
