--- a/Dior/accessory.html
+++ b/Dior/accessory.html
@@ -84,8 +84,9 @@
                                     <img src="./images/ass_img2.jpg" alt="슬라이드이미지600x500" width="600" height="500">
                                 </div>
                                 <div class="btn">
-                                    <button><a href="#">Back</a></button>
-                                    <button><a href="#">Next</a></button>
+                                    <!-- <button><a href="#">Back</a></button>
+                                    <button><a href="#">Next</a></button> -->
+                                    <h4>Dior만의 매력을 만나보세요.</h4>
                                 </div>
                             </div>
                             <!-- C-2. 스와이퍼 될 Slider 각각 내용들 -->
