--- a/travel_Temlplate/hana.html
+++ b/travel_Temlplate/hana.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="mcssam">
     <meta name="description" content="Portfolio, RWD Template">
-    <title>Portfolio, Post 반응형</title>
+    <title>Portfolio, Hana</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="./images/favicon/montblanc_fav32.png">
     <link rel="apple-touch-icon=precomposed" href="./images/favicon/montblanc_fav144.png">
@@ -215,37 +215,37 @@
                             <a href="#">
                                 <img src="./images/wallpaper.jpg" alt="블로그 이미지01">
                             </a>
-                            <p>하나투어의 특별한 여행지</p>
-                            <a href="#">
+                            <div>
+                                <p>하나투어의 특별한 여행지</p>
                                 <h3>
                                     꿈을 담은 특별한 여행, 하나 Original 상품이 궁금하다면?<br>
                                     특별한 추억을 담을 영행지로 달려가보세요.
                                 </h3>
-                            </a>
+                            </div>
                         </li>
                         <li>
                             <a href="#">
                                 <img src="./images/sun.jpg" alt="블로그 이미지02">
                             </a>
-                            <p>내년을 준비하는 하나</p>
-                            <a href="#">
+                            <div>
+                                <p>내년을 준비하는 하나</p>
                                 <h3>
                                     겨울 명소부터 해돋이 여행까지 <br>
                                     새로운 시작을 위한 겨울여행을 지금 시작하세요.
                                 </h3>
-                            </a>
+                            </div>
                         </li>
                         <li>
                             <a href="#">
                                 <img src="./images/nature.jpg" alt="블로그 이미지03">
                             </a>
-                            <p>하나투어 홀리데이</p>
-                            <a href="#">
+                            <div>
+                                <p>하나투어 홀리데이</p>
                                 <h3>
                                     홀리데이 시즌을 맞이한 자유로운 여행 <br>
                                     #내맘대로 떠나는 여행 #최대62%할인
                                 </h3>
-                            </a>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -294,7 +294,7 @@
             allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
             <p>
-                COPYRIGHT ALL RIGHTS RESERVED., WEBADD
+                COPYRIGHT &copy; HANATOUR SERVICE INC. ALL RIGHTS RESERVED
             </p>
         </footer>
         <!-- /4.Footer -->
